Chức năng duyệt sản phẩm, duyệt seller mới, đăng ký seller cho customer, bỏ yêu thích nhanh và bỏ hàng loạt