@@ -1,49 +1,53 @@
 package com.sw.security;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections; // ✅ Thêm import này
 
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority; // ✅ Thêm import này
 import org.springframework.security.core.userdetails.UserDetails;
 
 import com.sw.entity.Account;
 
 import lombok.AllArgsConstructor;
+import lombok.Data;
 
+@Data
 @AllArgsConstructor
-public class CustomUserDetails implements UserDetails{
-	/**
+public class CustomUserDetails implements UserDetails {
+
+    /**
 	 * 
 	 */
 	private static final long serialVersionUID = 1L;
 	private final Account account;
 
 	@Override
-	public Collection<? extends GrantedAuthority> getAuthorities() {
-		String roleName = "ROLE_" + account.getRole().getRoleName(); 
-	    return List.of(new SimpleGrantedAuthority(roleName));
-	}
-	
-	@Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        // Giữ nguyên logic chuẩn hóa: ROLE_ + tên vai trò viết thường
+        String roleName = "ROLE_" + account.getRole().getRoleName().toLowerCase();
+        return Collections.singletonList(new SimpleGrantedAuthority(roleName));
+    }
+    
+    @Override
+    public String getUsername() {
+        // ✅ THAY ĐỔI: Trả về "email|role" để khớp với subject của token
+        return account.getUser().getEmail() + "|" + account.getRole().getRoleName().toLowerCase();
+    }
+
+    @Override
     public String getPassword() {
         return account.getPassword();
     }
-	
-	@Override
-    public String getUsername() {
-        // Dùng email trong bảng User làm username đăng nhập
-        return account.getUser().getEmail();
-    }
-	
-	@Override
+
+    @Override
     public boolean isAccountNonExpired() {
         return true;
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        return !"locked".equalsIgnoreCase(account.getStatus());
+        return true;
     }
 
     @Override
@@ -54,13 +58,5 @@ public class CustomUserDetails implements UserDetails{
     @Override
     public boolean isEnabled() {
         return "active".equalsIgnoreCase(account.getStatus());
-    }
-
-    public Account getAccount() {
-        return account;
-    }
-    
-    public boolean hasRole(String roleName) {
-        return account.getRole() != null && account.getRole().getRoleName().equalsIgnoreCase(roleName);
     }
 }
